--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html{
 }
 
 .spin {
-    animation: spin 2s linear infinite;
+    animation: spin 3s linear infinite;
 }
 .grid-container {
     display: grid;
@@ -44,7 +44,9 @@ h1{
     justify-content: center;
     align-items: center;
 }
-
+h2 {
+    text-align: center;
+  }
 .navigation-menu {
     position: fixed;
     top: 0;
