--- a/style.css
+++ b/style.css
@@ -46,6 +46,8 @@ h1{
 }
 h2 {
     text-align: center;
+    justify-content: center;
+    align-items: center;
   }
 .navigation-menu {
     position: fixed;
